--- a/src/manage.html
+++ b/src/manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="index" lang="zh_CN">
+<html ng-app="manage" lang="zh_CN">
     <head>
         <meta charset="utf-8">
 
@@ -78,6 +78,6 @@
             </p>
         </footer>
         <script src="/js/templates.js"></script>
-        <script src="/js/index.js"></script>
+        <script src="/js/manage.js"></script>
     </body>
 </html>
