--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     </head>
 
     <body>
-        <div ng-controller="HeaderCtrl" class="navbar navbar-default navbar-fixed-top">
+        <div ng-controller="IndexHeaderCtrl" class="navbar navbar-default navbar-fixed-top">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="container">
                 <div class="navbar-header">
