--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
         Remove this if you use the .htaccess -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title ng-bind="page.title"></title>
-        <meta name="description" content="{{page.description}}">
+        <title>监控中心</title>
+        <meta name="description" content="监控中心">
         <meta name="author" content="savage">
 
         <meta name="viewport" content="width=device-width; initial-scale=1.0">
@@ -41,7 +41,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="javascript:location.href='/'"><i class="fa fa-refresh"> </i> 首页</a>
+                    <span class="navbar-brand"><i class="fa fa-home"> </i> 首页</span>
                 </div>
                 <nav class="hidden-xs">
                     <ul class="nav navbar-nav">
@@ -50,6 +50,9 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="/reg-room">注册监控室</a>
+                        </li>
                         <li>
                             <a href="/logout">退出</a>
                         </li>
