--- a/src/reg-room.html
+++ b/src/reg-room.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="login" lang="zh_CN">
+<html ng-app="reg-room" lang="zh_CN">
 	<head>
 		<meta charset="utf-8">
 
@@ -7,7 +7,7 @@
 		Remove this if you use the .htaccess -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title>Login</title>
+		<title>Reg room</title>
 		<meta name="author" content="savage">
 
 		<meta name="viewport" content="width=device-width; initial-scale=1.0">
@@ -40,31 +40,23 @@
 		</div>
 		<div class="header-placeholder"></div>
 
-		<div ng-controller="LoginMainCtrl" class="container">
-			<div class="jumbotron">
-				<h2>社交帐号登录</h2>
-				<p class="text-left">
-					选择您常用的账户登录.
-				</p>
-				<ul class="bs-oauth-list">
-                    <li>
-                        <span class="fa fa-qq" aria-hidden="true"></span>
-                        <span class="bs-oauth-text">QQ</span>
-                    </li>
-                    <li>
-                        <span class="fa fa-qq" aria-hidden="true"></span>
-                        <span class="bs-oauth-text">baidu</span>
-                    </li>
-                    <li>
-                        <span class="fa fa-qq" aria-hidden="true"></span>
-                        <span class="bs-oauth-text">weibo</span>
-                    </li>
-                    <li ng-repeat="oauth in OauthFactory.oauths" ng-click="OauthFactory.doLogin(oauth)">
-                        <span ng-class="oauth.css" aria-hidden="true"></span>
-                        <span ng-bind="oauth.text" class="bs-oauth-text"></span>
-                    </li>
-				</ul>
-			</div>
+		<div ng-controller="RegRoomMainCtrl" class="container">
+			<h3>注册监控室</h3>
+			<span ng-if="!RegLocal.hasLocalOne">本地监控室没有运行</span>
+			<form ng-if="RegLocal.hasLocalOne">
+				<div class="form-group">
+					<label> Enter the room name here:
+						<input ng-model="newRoomName" type="text" class="form-control" required>
+					</label>
+				</div>
+				<button type="submit" class="btn btn-default"
+				ng-disabled="RegLocal.status !== 'not_authed'" ng-click="regRoom(newRoomName)">
+					OK
+				</button>
+				<button type="reset" class="btn btn-default">
+					Cancel
+				</button>
+			</form>
 		</div>
 
 		<footer class="container">
@@ -72,6 +64,6 @@
 				&copy; Copyright  by savage
 			</p>
 		</footer>
-		<script src="/js/login.js"></script>
+		<script src="/js/reg-room.js"></script>
 	</body>
 </html>
