fix some bugs; add join.html

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="监控中心">
         <meta name="author" content="savage">
 
-        <meta name="viewport" content="width=device-width; initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
         <link rel="shortcut icon" href="/favicon.ico">
@@ -51,7 +51,10 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="/reg-room">注册监控室</a>
+                            <a href="/reg-room.html">注册监控室</a>
+                        </li>
+                        <li>
+                            <a href="/join.html">加入监控室</a>
                         </li>
                         <li>
                             <a href="/logout">退出</a>
