--- a/src/login.html
+++ b/src/login.html
@@ -10,7 +10,7 @@
 		<title>Login</title>
 		<meta name="author" content="savage">
 
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico">
@@ -20,7 +20,7 @@
 
 		<!-- head:css -->
 		<!-- endinject -->
-		<link rel="stylesheet" href="/css/index.css" />
+		<link rel="stylesheet" href="/css/login.css" />
 
 		<!-- head:js -->
 		<!-- only importantFile.js will be injected here -->
