--- a/src/join.html
+++ b/src/join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="join" lang="zh_CN">
+<html ng-app="[[module]]" lang="zh_CN">
 	<head>
 		<meta charset="utf-8">
 
@@ -20,7 +20,7 @@
 
 		<!-- head:css -->
 		<!-- endinject -->
-		<link rel="stylesheet" href="/css/join.css" />
+        <link rel="stylesheet" href="/css/[[module]].css" />
 
 		<!-- head:js -->
 		<!-- only importantFile.js will be injected here -->
@@ -67,6 +67,8 @@
 				&copy; Copyright  by savage
 			</p>
 		</footer>
-		<script src="/js/join.js"></script>
+        <script src="/ng/sys-data.js"></script>
+        <script src="/js/templates.js"></script>
+        <script src="/js/[[module]].js"></script>
 	</body>
 </html>
