--- a/src/login.html
+++ b/src/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="login" lang="zh_CN">
+<html ng-app="[[module]]" lang="zh_CN">
 	<head>
 		<meta charset="utf-8">
 
@@ -20,7 +20,7 @@
 
 		<!-- head:css -->
 		<!-- endinject -->
-		<link rel="stylesheet" href="/css/login.css" />
+        <link rel="stylesheet" href="/css/[[module]].css" />
 
 		<!-- head:js -->
 		<!-- only importantFile.js will be injected here -->
@@ -72,6 +72,7 @@
 				&copy; Copyright  by savage
 			</p>
 		</footer>
-		<script src="/js/login.js"></script>
+        <script src="/ng/sys-data.js"></script>
+        <script src="/js/[[module]].js"></script>
 	</body>
 </html>
