auto get local status in page reg-room

--- a/src/reg-room.html
+++ b/src/reg-room.html
@@ -45,7 +45,7 @@
 			<span ng-if="!RegLocal.hasLocalOne">本地监控室没有运行</span>
 			<form ng-if="RegLocal.hasLocalOne">
 				<div class="form-group">
-					<label> Enter the room name here:
+					<label> 发现本地监控室, Enter the room name here:
 						<input ng-model="newRoomName" type="text" class="form-control" required>
 					</label>
 				</div>
