add rtcVideo directive and remove ngRoute

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
         <div class="header-placeholder"></div>
         <toaster-container></toaster-container>
 
-        <div class="container" ng-view></div>
+        <div class="container" ng-include="'/views/index/main.html'"></div>
         <footer class="container">
             <p>
                 &copy; Copyright  by savage
