--- a/src/pages/rooms.html
+++ b/src/pages/rooms.html
@@ -40,7 +40,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<span class="navbar-brand"><i class="fa fa-home"> </i><span ng-bind="'PAGE_NAME.HOME'|translate"></span></span>
+					<span class="navbar-brand"><i class="fa fa-home"> </i><span ng-bind="'PAGE_NAME.INDEX'|translate"></span></span>
 				</div>
 				<nav class="hidden-xs">
 					<ul class="nav navbar-nav navbar-right">
