--- a/src/pages/join.html
+++ b/src/pages/join.html
@@ -30,7 +30,7 @@
 	</head>
 
 	<body>
-		<div ng-include="'/views/share/navbar.html'"></div>
+		<nav-bar></nav-bar>
 
 		<div ng-controller="JoinMainCtrl" class="container">
 			<h4 ng-bind="'PAGE.JOIN.DESC'|translate"></h4>
@@ -54,11 +54,6 @@
 			</form>
 		</div>
 
-		<footer class="container">
-			<p>
-				&copy; Copyright  by savage
-			</p>
-		</footer>
 		<script src="/ng/sys-data.js"></script>
 		<script src="/js/templates.js"></script>
 		<script src="/js/[[module]].js"></script>
