--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -1,50 +1,40 @@
 <!DOCTYPE html>
 <html ng-app="[[module]]" lang="zh_CN">
-	<head>
-		<meta charset="utf-8">
 
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
+<head>
+	<meta charset="utf-8">
+
+	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title ng-bind="'PAGE_NAME.LOGIN'|translate"></title>
-		<meta name="author" content="savage">
+	<title translate="PAGE_NAME.LOGIN"></title>
+	<meta name="author" content="empirefox@gmail.com">
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+	<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
+	<link rel="shortcut icon" href="[[cdnImg]]/favicon.ico">
+	<link rel="apple-touch-icon" href="[[cdnImg]]/apple-touch-icon.png">
 
-		<!-- jsdelivr-css -->
+	<!-- jsdelivr-css -->
 
-		<!-- head:css -->
-		<!-- endinject -->
-		<link rel="stylesheet" href="/css/[[module]].css" />
+	<!-- head:css -->
+	<!-- endinject -->
+	<link rel="stylesheet" href="[[cdnCss]]/[[module]].css" />
 
-		<!-- head:js -->
-		<!-- only importantFile.js will be injected here -->
-		<!-- endinject -->
+	<!-- head:js -->
+	<!-- only importantFile.js will be injected here -->
+	<!-- endinject -->
 
-		<!-- jsdelivr-js -->
-	</head>
+	<!-- jsdelivr-js -->
+</head>
 
-	<body>
-		<nav-bar class="hidden-xs"></nav-bar>
+<body>
+	<nav-bar></nav-bar>
+	<div ng-include="'/views/[[module]]/body.html'"></div>
+	<script src="[[cdnJs]]/templates.js"></script>
+	<script src="[[cdnJs]]/[[module]].js"></script>
+</body>
 
-		<div ng-controller="LoginMainCtrl" class="container">
-			<h4 class="hidden-xs" ng-bind="'PAGE.LOGIN.DESC'|translate"></h4>
-			<hr class="hidden-xs"/>
-			<ul class="bs-oauth-list">
-				<li ng-repeat="oauth in OauthFactory.oauths" ng-click="OauthFactory.doLogin(oauth)">
-					<span ng-class="oauth.css" aria-hidden="true"></span>
-					<span ng-bind="oauth.text|translate" class="bs-oauth-text"></span>
-				</li>
-			</ul>
-		</div>
-
-		<script src="/ng/sys-data.js"></script>
-		<script src="/js/templates.js"></script>
-		<script src="/js/[[module]].js"></script>
-	</body>
 </html>
