--- a/src/standalone/token-one.html
+++ b/src/standalone/token-one.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html>
 
 <head>
 	<meta charset="utf-8">
 </head>
 
 <body>
-	<script src="/js_3rd/reg-room.js"></script>
+	<script src="[[cdnJs]]/token-one.js"></script>
 </body>
 
 </html>
