add common.js;refactor index

--- a/src/pages/dl.html
+++ b/src/pages/dl.html
@@ -33,7 +33,7 @@
 <body>
 	<nav-bar></nav-bar>
 	<div ng-include="'/views/[[module]]/body.html'"></div>
-	<script src="[[cdnJs]]/templates.js"></script>
+	<script src="[[cdnJs]]/[[commonDestName]]"></script>
 	<script src="[[cdnJs]]/[[module]].js"></script>
 </body>
 
