--- a/src/pages/join.html
+++ b/src/pages/join.html
@@ -35,7 +35,7 @@
 	<nav-bar></nav-bar>
 	<toaster-container></toaster-container>
 	<div ng-include="'/views/[[module]]/body.html'"></div>
-	<script src="[[cdnJs]]/templates.js"></script>
+	<script src="[[cdnJs]]/[[commonDestName]]"></script>
 	<script src="[[cdnJs]]/[[module]].js"></script>
 </body>
 
