record refactor, not finished

--- a/src/pages/dl.html
+++ b/src/pages/dl.html
@@ -21,6 +21,7 @@
 
 	<!-- head:css -->
 	<!-- endinject -->
+	<link rel="stylesheet" href="[[cdnCss]]/common.css" />
 	<link rel="stylesheet" href="[[cdnCss]]/[[module]].css" />
 
 	<!-- head:js -->
