--- a/src/pages/join.html
+++ b/src/pages/join.html
@@ -22,6 +22,7 @@
 
 	<!-- head:css -->
 	<!-- endinject -->
+	<link rel="stylesheet" href="[[cdnCss]]/nvs/v2.0/nvs.min.css" />
 	<link rel="stylesheet" href="[[cdnCss]]/common.css" />
 	<link rel="stylesheet" href="[[cdnCss]]/[[module]].css" />
 
