force https when login; fix index page layout

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -24,6 +24,11 @@
 	<link rel="stylesheet" href="[[cdnCss]]/nvs/v2.0/nvs.min.css" />
 	<link rel="stylesheet" href="[[cdnCss]]/common.css" />
 	<link rel="stylesheet" href="[[cdnCss]]/[[module]].css" />
+	<script type="text/javascript">
+		if (window.location.protocol === 'http:') {
+			window.location.assign(window.location.href.replace(/^http\:\/\//, 'https://'));
+		}
+	</script>
 
 	<!-- head:js -->
 	<!-- only importantFile.js will be injected here -->
