--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="[[cdnCss]]/common.css" />
 	<link rel="stylesheet" href="[[cdnCss]]/[[module]].css" />
 	<script type="text/javascript">
-		if (window.location.protocol === 'http:') {
+		if (window.location.protocol === 'http:' && window.location.hostname !== '127.0.0.1') {
 			window.location.assign(window.location.href.replace(/^http\:\/\//, 'https://'));
 		}
 	</script>
