--- a/src/pages/dl.html
+++ b/src/pages/dl.html
@@ -7,6 +7,7 @@
 	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 		Remove this if you use the .htaccess -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="Content-Security-Policy" content="[[csp()]]">
 
 	<title translate="PAGE_NAME.DOWNLOAD"></title>
 	<meta name="author" content="empirefox@gmail.com">
