--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -7,6 +7,7 @@
 	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 		Remove this if you use the .htaccess -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="Content-Security-Policy" content="[[csp()]]">
 
 	<title translate="PAGE_NAME.LOGIN"></title>
 	<meta name="author" content="empirefox@gmail.com">
@@ -24,11 +25,6 @@
 	<link rel="stylesheet" href="[[cdnCss]]/nvs/v2.0/nvs.min.css" />
 	<link rel="stylesheet" href="[[cdnCss]]/common.css" />
 	<link rel="stylesheet" href="[[cdnCss]]/[[module]].css" />
-	<script type="text/javascript">
-		if (window.location.protocol === 'http:' && window.location.hostname !== '127.0.0.1') {
-			window.location.assign(window.location.href.replace(/^http\:\/\//, 'https://'));
-		}
-	</script>
 
 	<!-- head:js -->
 	<!-- only importantFile.js will be injected here -->
